--- a/paginanirvana/site-acessivel-projeto-inicial/styles.css
+++ b/paginanirvana/site-acessivel-projeto-inicial/styles.css
@@ -2,12 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #000000;
+    --laranja-claro: hsl(0, 0%, 0%);
 }
 
 body {
     font-size: 1rem;
     font-family: 'Montserrat';
+    background-color: #000000;
 }
 
 header {
@@ -53,6 +54,7 @@ section {
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
+
 }
 
 
@@ -120,23 +122,23 @@ h2 {
 }
 
 .formulario {
-    background-color: #302f2f;
+    background-color: #f8f6f6;
     padding: 2rem;
     /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
     /* Borda arredondada para o formulário */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #ffffff;
     /* Sombra suave para destacar o formulário */
     font-weight: bold;
 }
 
 .formulario button {
-    background-color: #CB6D43;
+    background-color: #ffffff;
     border: none;
     font-weight: bold;
 }
 
 /* chama classe do bootstrap para modificar a cor */
 .form-control {
-    background-color: #3d3b3c;
+    background-color: #ffffff;
 }
